feat: add api for index multiple json documents
